@@ -1,6 +1,9 @@
 package es.dwes.backend_usuarios.config;
-import java.util.Arrays;
 
+import java.util.Arrays;
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
@@ -15,38 +18,50 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-    // Utilizado para hashear las contraseñas
+    @Value("${app.cors.allowed-origins:*}")
+    private String allowedOrigins;
+
     @Bean
-    public BCryptPasswordEncoder passwordEncoder(){
+    public BCryptPasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            // Habilitamos CORS para que el frontend (puerto 8000) pueda hacer peticiones al backend (8083)
-            .cors(Customizer.withDefaults()) 
-            // Deshabilitamos CSRF para simplificar las peticiones POST desde React
+            .cors(Customizer.withDefaults())
             .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(auth -> auth
-                // Permitimos acceso público a registro, login y toda la API de compras para desarrollo
-                .requestMatchers("/registro", "/login", "/api/**", "/permisos", "/cambiarDatos/**", "/eliminarCuenta/**", "/preferencias", "/preferencias/**").permitAll() 
-                .anyRequest().authenticated()        
-                
+                .requestMatchers(
+                    "/registro",
+                    "/login",
+                    "/api/**",
+                    "/permisos",
+                    "/cambiarDatos/**",
+                    "/eliminarCuenta/**",
+                    "/preferencias",
+                    "/preferencias/**"
+                ).permitAll()
+                .anyRequest().authenticated()
             )
             .httpBasic(Customizer.withDefaults());
-            
+
         return http.build();
     }
 
-    // Configuración detallada de CORS para evitar el error "Failed to fetch"
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Permitimos cualquier origen (*) para evitar problemas de conectividad en local
-        configuration.setAllowedOrigins(Arrays.asList("*"));
+        List<String> originPatterns = Arrays.stream(allowedOrigins.split(","))
+            .map(String::trim)
+            .filter(origin -> !origin.isEmpty())
+            .toList();
+
+        configuration.setAllowedOriginPatterns(originPatterns.isEmpty() ? List.of("*") : originPatterns);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
